homeWork_32 2.0